fix button success contrast

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -74,7 +74,7 @@ $foundation-palette: (
   _primary: #1779ba,
   secondary: #767676,
   _success: #3adb76,
-  success: #1DA063,
+  success: #18813B,
   warning: #ffae00,
   alert: #cc4b37,
 );
@@ -313,8 +313,8 @@ $button-background: $primary-color;
 // $button-background-hover: scale-color($button-background, $lightness: -15%);
 $button-background-hover: scale-color($button-background, $lightness: +15%);
 $button-color: $white;
-//$button-color-alt: $black;
-$button-color-alt: $white;
+$button-color-alt: $black;
+//$button-color-alt: $white;
 $button-radius: $global-radius;
 $button-border: 1px solid transparent;
 $button-hollow-border-width: 1px;
@@ -326,7 +326,7 @@ $button-sizes: (
 );
 $button-palette: $foundation-palette;
 $button-opacity-disabled: 0.25;
-$button-background-hover-lightness: -20%;
+$button-background-hover-lightness: +20%;
 $button-hollow-hover-lightness: -50%;
 $button-transition: background-color 0.25s ease-out, color 0.25s ease-out;
 $button-responsive-expanded: true;
